--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.0",
+    "resend": "^6.6.0",
     "sequelize": "^6.37.7",
     "zod": "^4.2.1"
   },
